--- a/public/src/index.css
+++ b/public/src/index.css
@@ -1,6 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserra:wght@400;500&display=swap');
+
+:root{
+  --nav-size: 60px;
+  --color-border: #A7C8F2;
+  --color-dark-border: #048ABF;
+  --color-primary: #027368;
+  --color-primary-dark: #025951;
+  --color-acent: #F25116;
+  --color-text: #fafafa;
+}
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Montserrat', sans-serif, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
