--- a/public/src/components/nav/nav.scss
+++ b/public/src/components/nav/nav.scss
@@ -1,27 +1,56 @@
+$tablet-width: 768px;
+$desktop-width: 1024px;
+
+@mixin tablet {
+  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1}){
+    @content;
+  }
+}
+
+@mixin desktop {
+  @media(min-width: #{$desktop-width}){
+    @content;
+  }
+}
+
 nav {
-  background: var(--color-primary-dark);
+  background: white;//var(--color-primary-dark);
   height: var(--nav-size);
   display: flex;
-  padding: 0 20px;
   justify-content: space-between;
   align-items: center;
   position: fixed;
   top: 0;
   width: 100%;
   z-index: 99;
-  
+  overflow: hidden;
+  box-shadow: 5px 0 10px #7775;
+  padding: 0 10px;
+
+  @include desktop{
+    padding: 0 100px;
+
+  }
+
   ul {
     display: flex;
 
     li {
-      background-color: var(--color-primary);
-      border: 1px solid var(--color-border);
+      // background-color: var(--color-primary);
+      // border: 1px solid var(--color-border);
+
       list-style: none;
+      a{
+        color: #777;
+      }
     }
   }
 
+   a:active{
+    color: black;
+  }
+
   .logo {
-    font-weight: 600;
     span {
       color: var(--color-acent);
     }
@@ -29,11 +58,17 @@ nav {
 
   a,
   .logo {
+    font-weight: 600;
     display: block;
-    padding: .2em 2em;
+    padding: .2em .8em;
     text-transform: uppercase;
-    font-size: 1.1em;
     text-decoration: none;
-    color: var(--color-text);
+    color: black;//var(--color-text);
+
+    @include desktop{
+      font-size: 1em;
+      padding: .2em 2em;
+
+    }
   }
 }
